--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,18 @@
 /* TODO Add site wide styles */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    margin: 0;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
