--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -6,3 +6,29 @@
     align-items: center;
     padding: 1rem;
 }
+
+#user-profile-icon {
+    position: relative;
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+#icon-dropdown {
+    position: absolute;
+    background-color: white;
+    border: 2px solid navy;
+    right: 1rem;
+    padding: 1rem 2rem;
+    border-radius: 7px;
+    width: 8rem;
+}
+
+#icon-dropdown > li {
+    cursor: pointer;
+}
+
+#icon-dropdown > li:hover {
+    font-weight: bold;
+}
